secondary commit. Adding more changes and pictures for further dev

--- a/index.html
+++ b/index.html
@@ -5,21 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="display.css">
 </head>
 <body>
-    <header class="header container"></header>
-    <main></main>
-    <div class="hero">
-        <nav>
-            <h2 class="logo">Portfolio</h2>
-            <ul>
-                <li><a href="#about.html">About Me</a></li>
-                <li><a href="#blog.html">Blog</a></li>
-                <li><a href="#contact.html">Contact Me</a></li>
-      </ul>
+    <header class="header container">
+        <nav class="navbar">
+            <ul class="header__nav">
+                <li>
+                    <a class="header__titles" href="about.html">About</a>
+                </li>
+                <li>
+                    <a class="header__titles" href="blog.html">Blog</a>
+                </li>
+                <li>
+                    <a class="header__titles" href="contact.html">Contact</a>
+                </li>
+            </ul>
+            <button class="header__hamburger">
+                
+            </button>
         </nav>
-    </div>
-    <section> <button class="btn">button</button></section>
-    <footer></footer>
+    </header>
+    <main>
+
+    </main>
 </body>
 </html>
