--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,9 @@
         <nav class="navbar">
             <ul class="header__nav">
                 <li>
+                    <a class="header__titles" href="index.html">Home</a>
+                </li>
+                <li>
                     <a class="header__titles" href="about.html">About</a>
                 </li>
                 <li>
