--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <nav class="navbar">
             <ul class="header__nav">
                 <li>
+                    <a class="header__titles" href="index.html">Home</a>
+                </li>
+                <li>
                     <a class="header__titles" href="about.html">About</a>
                 </li>
                 <li>
@@ -23,7 +26,14 @@
             </ul>
     </header>
     <main>
-
+        <div>
+            <h2>
+               Hi, My name is Connor.
+            </h2>
+            <h3>
+                I am an aspiring web developer and this is a Portfolio displaying my skills.
+            </h3>
+            </div>
     </main>
 </body>
 </html>
