--- a/contact.html
+++ b/contact.html
@@ -25,5 +25,13 @@
                 </li>
             </ul>
     </header>
+    <!-- <p class="contact__links">
+        <img src="./docs/images/social.png" alt="Github" class="contact_icon">
+        <a href="https://github.com/Connorswebdev"></a>
+    </p>
+    <p class="contact__links">
+        <img src="./docs/images/linkedin.png" alt="LinkedIn" class="contact_icon">
+        <a href="https://www.linkedin.com/in/connor-ross-26a45b254/"></a>
+    </p> -->
 </body>
-</html>
+</html> 
