--- a/about.html
+++ b/about.html
@@ -25,5 +25,18 @@
                 </li>
             </ul>
     </header>
+    <h1>A brief summary</h1>
+    <h2> Growing up!</h2>
+    <p>
+        I was born in Brisbane in the northern suburb of Bray Park which is where I stayed with my mum and dad for 7 years. My parents eventually split up and my dad moved to the southern suburbs which meant we saw him every second weekend. I attended Petrie State School where I became a school leader in my final year in Grade 7. After graduating from Petrie State School I attended Bray Park State High School. During that time I began working and made an effort to study and work to help support myself for the future. I began my career at KFC, working as a casual employee but working hard and eventaully finding myself in a team leader position before graduating high school. Upon completion of high school and unsure of what to do career-wise, I took the opportunity to become a manager and rapidly grew within the company. I was often moved around to other stores to help uplift their people and standards to bring up the brand name. During this time is also where the pandemic started, which halted my career as their was not enough resources to keep moving me around.
+    </p>
+    <h2> Moving forward!</h2>
+    <p>
+    During the pandemic, I was living by myself. I was all alone, in the city, and locked inside. I was working irregular hours and needed to find a way to make money for rent. So, I began a project to continue something I had always loved. I started producing beats for artists around the globe to use. I ammased over 50,000 listens over tracks that I had released by myself and about 10 times more through other musicians and artists who used my music. I began charging for services and working long periods of time to make ends meet. After lockdown restrictions ceased I began working again and slowly stopped my music career. After becoming a Restaurant Manager, I transitioned out and began a career in sales. I saw massive success there where I brought on several million dollar companies. After a short period of time in this role I realised I wanted to pursure something different, a career in web development and programming.
+    </p>
+    <h2> Where to from here?</h2>
+    <p>
+        Recently, I have had to make several changes to make sure I am setting myself up for success and most importantly make sure I am happy. I couldn't see myself as a Restaurant Manager for much longer and did not plan on being in sales long term. I have always been passionate about technology and computer programming so I am excited to see where I end up. Thankfully, I have Coder Academy to back me up and make sure I learn all the right stuff!
+    </p>
 </body>
 </html>
