--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="display.css">
+    <link rel="stylesheet" href="blog.css">
 </head>
 <body>
     <header class="header container">
@@ -25,5 +26,22 @@
                 </li>
             </ul>
     </header>
+    <br>
+    <article class="blog"> <h3> My Very First Blog!</h3> <br>
+        <h4> By Connor Ross | Posted on 14/09/2023 </h4> <img src="https://placekitten.com/g/200/300" alt=""> <br>
+        Lorem ipsum dolor sit amet consectetur... <a href="blog1.html">Click Here to Read More</a>
+    </article>
+    <br>
+    <article class="blog"> <h3> Whats Happening?</h3> <br>
+        <h4> By Connor Ross | Posted on 18/09/2023 </h4> <img src="https://placekitten.com/g/200/300" alt="">
+        <br>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quam eius praesentium dolorum voluptate nam. Dignissimos laborum libero molestias error officia accusamus, tempore sapiente sunt non dolore pariatur velit totam!
+    </article>
+    <br>
+    <article class="blog"><h3> Wow! I am Learning so Much!</h3><br>
+        <h4> By Connor Ross | Posted on 23/09/2023 </h4><img src="https://placecorgi.com/200/300" alt="">
+        <br>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quam eius praesentium dolorum voluptate nam. Dignissimos laborum libero molestias error officia accusamus, tempore sapiente sunt non dolore pariatur velit totam!
+    </article>
 </body>
 </html>
