--- a/index.html
+++ b/index.html
@@ -27,13 +27,22 @@
     </header>
     <main>
         <div>
-            <h2>
-               Hi, My name is Connor.
+            <h2 class="title">
+              <div class="container"> Hi, My name is Connor. </div> <img src="./docs/images/profile.png" alt="" class="profile">
             </h2>
-            <h3>
-                I am an aspiring web developer and this is a Portfolio displaying my skills.
+            <h3 class="title">
+                I am an aspiring web developer and this is a Portfolio displaying my skills. This website has full functionality, plus links to my resume and blog. Feel free to have a look around!
             </h3>
             </div>
+            <br>
+            <div class="socials">
+                Links to my socials! <br>
+        <img src="./docs/images/linkedin.png" alt="" class="icon__size"><a href="https://www.linkedin.com/in/connor-ross-26a45b254/">LinkedIn</a><img src="./docs/images/icons8-github-48.png" alt="" class="icon__size"><a href="https://github.com/Connorswebdev">Github</a> <br> Icons by <a target="_blank" href="https://icons8.com">Icons8</a>
+            </div>
     </main>
+    <!-- <footer>
+        Links to my socials! <br>
+        <img src="./docs/images/linkedin.png" alt="" class="icon__size"><a href="https://www.linkedin.com/in/connor-ross-26a45b254/">LinkedIn</a><img src="./docs/images/icons8-github-48.png" alt="" class="icon__size"><a href="https://github.com/Connorswebdev">Github</a> <br> Icons by <a target="_blank" href="https://icons8.com">Icons8</a>
+    </footer> -->
 </body>
 </html>
