content additions and form for contact page

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="display.css">
+    <link rel="stylesheet" href="blog.css">
 </head>
 <body>
     <header class="header container">
@@ -25,7 +26,7 @@
                 </li>
             </ul>
     </header>
-    <h1>A brief summary</h1>
+    <h1 class="blog">A Brief Summary</h1>
     <h2> Growing up!</h2>
     <p>
         I was born in Brisbane in the northern suburb of Bray Park which is where I stayed with my mum and dad for 7 years. My parents eventually split up and my dad moved to the southern suburbs which meant we saw him every second weekend. I attended Petrie State School where I became a school leader in my final year in Grade 7. After graduating from Petrie State School I attended Bray Park State High School. During that time I began working and made an effort to study and work to help support myself for the future. I began my career at KFC, working as a casual employee but working hard and eventaully finding myself in a team leader position before graduating high school. Upon completion of high school and unsure of what to do career-wise, I took the opportunity to become a manager and rapidly grew within the company. I was often moved around to other stores to help uplift their people and standards to bring up the brand name. During this time is also where the pandemic started, which halted my career as their was not enough resources to keep moving me around.
