--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,26 @@
                 </li>
             </ul>
     </header>
+    <div class="socials">
+        <h3>Lets get Social! </h3> <br>
+<img src="./docs/images/linkedin.png" alt="" class="icon__size"><a href="https://www.linkedin.com/in/connor-ross-26a45b254/">LinkedIn</a><img src="./docs/images/icons8-github-48.png" alt="" class="icon__size"><a href="https://github.com/Connorswebdev">Github</a> <br> Icons by <a target="_blank" href="https://icons8.com">Icons8</a>
+    </div>
+    <h3 id="contact">Got a burning question thats better over email? Use the contact form below</h3>
+    <form class="contact" action="#">
+        <div class="row"><br />
+          <input id="name" class="input" name="name" type="text" value="" size="30" placeholder="Your Name:" /><br />
+        </div>
+        <div class="row">
+          <br />
+          <input id="email" class="input" name="email" type="text" value="" size="30" placeholder="Your Email:" /><br />
+        </div>
+        <div class="row">
+          <br />
+          <textarea id="message" class="input" name="message" rows="7" cols="30" placeholder="Write your message here:"></textarea><br />
+        </div>
+          
+          <input id="submit" type="submit" value="Send email" />
+      </form>
     <!-- <p class="contact__links">
         <img src="./docs/images/social.png" alt="Github" class="contact_icon">
         <a href="https://github.com/Connorswebdev"></a>
