--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="display.css">
 </head>
 <body>
+    <!-- This is my first component - my navigation bar. This is accessible on each page. Styling for this is included in style.css -->
     <header class="header container">
         <nav class="navbar">
             <ul class="header__nav">
@@ -36,7 +37,7 @@
             </div>
             <br>
             <div class="socials">
-                Links to my socials! <br>
+                <h3>Links to my socials! </h3> <br>
         <img src="./docs/images/linkedin.png" alt="" class="icon__size"><a href="https://www.linkedin.com/in/connor-ross-26a45b254/">LinkedIn</a><img src="./docs/images/icons8-github-48.png" alt="" class="icon__size"><a href="https://github.com/Connorswebdev">Github</a> <br> Icons by <a target="_blank" href="https://icons8.com">Icons8</a>
             </div>
     </main>
