--- a/blog.html
+++ b/blog.html
@@ -41,19 +41,17 @@
     <article class="blog"><h3> Wow! I am Learning so Much!</h3><br>
         <h4> By Connor Ross | Posted on 23/09/2023 </h4><img src="https://placekitten.com/200/300" alt="">
         <br>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quam eius praesentium dolorum voluptate nam. Dignissimos laborum libero molestias error officia accusamus, tempore sapiente sunt non dolore pariatur velit totam!
-    </article>
+        Lorem ipsum dolor sit amet consectetur... <a href="blog3.html">Click Here to Read More</a>
     <br>
     <article class="blog"><h3>And Another Thing...</h3><br>
         <h4> By Connor Ross | Posted on 24/09/2023 </h4><img src="https://placekitten.com/200/300" alt="">
         <br>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quam eius praesentium dolorum voluptate nam. Dignissimos laborum libero molestias error officia accusamus, tempore sapiente sunt non dolore pariatur velit totam!
+        Lorem ipsum dolor sit amet consectetur... <a href="blog4.html">Click Here to Read More</a>
     </article>
     <br>
     <article class="blog"><h3> Blogs are pretty neat</h3><br>
         <h4> By Connor Ross | Posted on 25/09/2023 </h4><img src="https://placekitten.com/200/300" alt="">
         <br>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quam eius praesentium dolorum voluptate nam. Dignissimos laborum libero molestias error officia accusamus, tempore sapiente sunt non dolore pariatur velit totam!
-    </article>
+        Lorem ipsum dolor sit amet consectetur...<a href="blog5.html">Click Here to Read More</a>
 </body>
 </html>
