Changing links to be stylised

--- a/about.html
+++ b/about.html
@@ -39,5 +39,13 @@
     <p>
         Recently, I have had to make several changes to make sure I am setting myself up for success and most importantly make sure I am happy. I couldn't see myself as a Restaurant Manager for much longer and did not plan on being in sales long term. I have always been passionate about technology and computer programming so I am excited to see where I end up. Thankfully, I have Coder Academy to back me up and make sure I learn all the right stuff!
     </p>
+    <br>
+    <p>
+        <br>
+        If you want to get to know me more on a professional level. I have linked my resume to download below.
+        <br>
+        <br>
+        <a class="header__titles" href="resume.pdf" download="resume.pdf">Download My Resume</a>
+    </p>
 </body>
 </html>
