--- a/blog.html
+++ b/blog.html
@@ -27,29 +27,29 @@
             </ul>
     </header>
     <br>
-    <article class="blog"> <h3> My Very First Blog!</h3> <br>
+    <article> <h3 class="blog"> My Very First Blog!</h3> <br>
         <h4> By Connor Ross | Posted on 14/09/2023 </h4> <img src="https://placekitten.com/g/200/300" alt=""> <br>
         Lorem ipsum dolor sit amet consectetur... <a href="blog1.html">Click Here to Read More!</a>
     </article>
     <br>
-    <article class="blog"> <h3> Whats Happening?</h3> <br>
+    <article> <h3 class="blog"> Whats Happening?</h3> <br>
         <h4> By Connor Ross | Posted on 18/09/2023 </h4> <img src="https://placekitten.com/g/200/300" alt="">
         <br>
         Lorem ipsum dolor sit amet consectetur... <a href="blog2.html">Click Here to Read More!</a>
     </article>
     <br>
-    <article class="blog"><h3> Wow! I am Learning so Much!</h3><br>
+    <article><h3 class="blog"> Wow! I am Learning so Much!</h3><br>
         <h4> By Connor Ross | Posted on 23/09/2023 </h4><img src="https://placekitten.com/200/300" alt="">
         <br>
         Lorem ipsum dolor sit amet consectetur... <a href="blog3.html">Click Here to Read More</a>
     <br>
-    <article class="blog"><h3>And Another Thing...</h3><br>
+    <article><h3 class="blog">And Another Thing...</h3><br>
         <h4> By Connor Ross | Posted on 24/09/2023 </h4><img src="https://placekitten.com/200/300" alt="">
         <br>
         Lorem ipsum dolor sit amet consectetur... <a href="blog4.html">Click Here to Read More</a>
     </article>
     <br>
-    <article class="blog"><h3> Blogs are pretty neat</h3><br>
+    <article><h3 class="blog"> Blogs are pretty neat</h3><br>
         <h4> By Connor Ross | Posted on 25/09/2023 </h4><img src="https://placekitten.com/200/300" alt="">
         <br>
         Lorem ipsum dolor sit amet consectetur...<a href="blog5.html">Click Here to Read More</a>
