--- a/index.html
+++ b/index.html
@@ -37,13 +37,9 @@
             </div>
             <br>
             <div class="socials">
-                <h3>Links to my socials! </h3> <br>
-        <img src="./docs/images/linkedin.png" alt="" class="icon__size"><a href="https://www.linkedin.com/in/connor-ross-26a45b254/">LinkedIn</a><img src="./docs/images/icons8-github-48.png" alt="" class="icon__size"><a href="https://github.com/Connorswebdev">Github</a> <br> Icons by <a target="_blank" href="https://icons8.com">Icons8</a>
+                <h3>Lets Get Social! </h3> <br>
+        <img src="./docs/images/linkedin.png" alt="" class="icon__size"><a class="header__titles" href="https://www.linkedin.com/in/connor-ross-26a45b254/">LinkedIn</a><img src="./docs/images/icons8-github-48.png" alt="" class="icon__size"><a class="header__titles" href="https://github.com/Connorswebdev">Github</a> <br><br><br> Icons by <a class="header__titles" target="_blank" href="https://icons8.com">Icons8</a>
             </div>
     </main>
-    <!-- <footer>
-        Links to my socials! <br>
-        <img src="./docs/images/linkedin.png" alt="" class="icon__size"><a href="https://www.linkedin.com/in/connor-ross-26a45b254/">LinkedIn</a><img src="./docs/images/icons8-github-48.png" alt="" class="icon__size"><a href="https://github.com/Connorswebdev">Github</a> <br> Icons by <a target="_blank" href="https://icons8.com">Icons8</a>
-    </footer> -->
 </body>
 </html>
