Changes to directory layout so changing pictures

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
         <div>
             <h2 class="title">
-              <div class="container"> Hi, My name is Connor. </div> <img src="./docs/images/profile.png" alt="" class="profile">
+              <div class="container"> Hi, My name is Connor. </div> <img src="./src/images/profile.png" alt="" class="profile">
             </h2>
             <h3 class="title">
                 I am an aspiring web developer and this is a Portfolio displaying my skills. This website has full functionality, plus links to my resume and blog. Feel free to have a look around!
@@ -38,7 +38,7 @@
             <br>
             <div class="socials">
                 <h3>Lets Get Social! </h3> <br>
-        <img src="./docs/images/linkedin.png" alt="" class="icon__size"><a class="header__titles" href="https://www.linkedin.com/in/connor-ross-26a45b254/">LinkedIn</a><img src="./docs/images/icons8-github-48.png" alt="" class="icon__size"><a class="header__titles" href="https://github.com/Connorswebdev">Github</a> <br><br><br> Icons by <a class="header__titles" target="_blank" href="https://icons8.com">Icons8</a>
+        <img src="./src/images/linkedin.png" alt="" class="icon__size"><a class="header__titles" href="https://www.linkedin.com/in/connor-ross-26a45b254/">LinkedIn</a><img src="./src/images/social.png" alt="" class="icon__size"><a class="header__titles" href="https://github.com/Connorswebdev">Github</a> <br><br><br> Icons by <a class="header__titles" target="_blank" href="https://icons8.com">Icons8</a>
             </div>
     </main>
 </body>
