--- a/src/blog2.html
+++ b/src/blog2.html
@@ -27,7 +27,7 @@
             </ul>
     </header>
     <h3> Whats Happening?</h3>
-    <h4> By Connor Ross | Posted on 14/09/2023 </h4> <img class="blog__img" src="./src/images/Blog 2.jpg" alt=""> <br>
+    <h4> By Connor Ross | Posted on 14/09/2023 </h4> <img class="blog__img" src="./images/Blog 2.jpg" alt=""> <br>
     <p>
     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quam eius praesentium dolorum voluptate nam. Dignissimos laborum libero molestias error officia accusamus, tempore sapiente sunt non dolore pariatur velit totam!
     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident fuga quas dignissimos iusto beatae voluptates omnis nostrum dolorum dolores sit atque numquam error dolore, expedita odio voluptatum voluptatibus eligendi delectus. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio ipsa blanditiis corporis unde, quam sapiente, repellat reiciendis earum doloremque eaque ratione rerum est, ab harum rem cupiditate quasi numquam autem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel voluptas ducimus nostrum quasi deleniti error temporibus rerum corporis, laborum nisi similique consequuntur dolores, beatae ratione voluptatibus? Consectetur omnis quam velit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium saepe similique corrupti architecto natus pariatur nam hic enim accusamus quo eaque eius dolores, rem dolorem velit a tenetur provident perspiciatis? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id consequuntur cumque ullam assumenda, aut natus culpa quas placeat pariatur qui doloribus distinctio hic reprehenderit minima velit sed accusamus, doloremque voluptatem?
