--- a/src/contact.html
+++ b/src/contact.html
@@ -27,7 +27,7 @@
     </header>
     <div class="socials">
         <h3>Lets get Social! </h3> <br>
-        <img src="./src/images/linkedin.png" alt="" class="icon__size"><a class="header__titles" href="https://www.linkedin.com/in/connor-ross-26a45b254/">LinkedIn</a><img src="./src/images/social.png" alt="" class="icon__size"><a class="header__titles" href="https://github.com/Connorswebdev">Github</a> <br><br><br> Icons by <a class="header__titles" target="_blank" href="https://icons8.com">Icons8</a>
+        <img src="./images/linkedin.png" alt="" class="icon__size"><a class="header__titles" href="https://www.linkedin.com/in/connor-ross-26a45b254/">LinkedIn</a><img src="./images/social.png" alt="" class="icon__size"><a class="header__titles" href="https://github.com/Connorswebdev">Github</a> <br><br><br> Icons by <a class="header__titles" target="_blank" href="https://icons8.com">Icons8</a>
     </div>
     <h3 id="contact">Got a burning question thats better over email? Use the contact form below</h3>
     <form class="contact" action="#">
