--- a/src/blog.html
+++ b/src/blog.html
@@ -28,29 +28,29 @@
     </header>
     <br>
     <article> <h3 class="blog"> My Very First Blog!</h3> <br>
-        <h4> By Connor Ross | Posted on 14/09/2023 </h4> <img class="blog_img" src="./src/images/Blog 1.jpg" alt=""> <br>
+        <h4> By Connor Ross | Posted on 14/09/2023 </h4> <img class="blog_img" src="./images/Blog 1.jpg" alt=""> <br>
         Lorem ipsum dolor sit amet consectetur... <a href="blog1.html">Click Here to Read More!</a>
     </article>
     <br>
     <article> <h3 class="blog"> Whats Happening?</h3> <br>
-        <h4> By Connor Ross | Posted on 18/09/2023 </h4> <img class="blog_img" src="./src/images/Blog 2.jpg" alt="">
+        <h4> By Connor Ross | Posted on 18/09/2023 </h4> <img class="blog_img" src="./images/Blog 2.jpg" alt="">
         <br>
         Lorem ipsum dolor sit amet consectetur... <a href="blog2.html">Click Here to Read More!</a>
     </article>
     <br>
     <article><h3 class="blog"> Wow! I am Learning so Much!</h3><br>
-        <h4> By Connor Ross | Posted on 23/09/2023 </h4><img class="blog_img" src="./src/images/blog 3.jpg" alt="">
+        <h4> By Connor Ross | Posted on 23/09/2023 </h4><img class="blog_img" src="./images/blog 3.jpg" alt="">
         <br>
         Lorem ipsum dolor sit amet consectetur... <a href="blog3.html">Click Here to Read More</a>
     <br>
     <article><h3 class="blog">And Another Thing...</h3><br>
-        <h4> By Connor Ross | Posted on 24/09/2023 </h4><img class="blog_img" src="./src/images/blog 4.jpg" alt="">
+        <h4> By Connor Ross | Posted on 24/09/2023 </h4><img class="blog_img" src="./images/blog 4.jpg" alt="">
         <br>
         Lorem ipsum dolor sit amet consectetur... <a href="blog4.html">Click Here to Read More</a>
     </article>
     <br>
     <article><h3 class="blog"> Blogs are pretty neat</h3><br>
-        <h4> By Connor Ross | Posted on 25/09/2023 </h4><img class="blog_img" src="./src/images/blog 5.jpg" alt="">
+        <h4> By Connor Ross | Posted on 25/09/2023 </h4><img class="blog_img" src="./images/blog 5.jpg" alt="">
         <br>
         Lorem ipsum dolor sit amet consectetur...<a href="blog5.html">Click Here to Read More</a>
 </body>
