changes to blog layout for final change

--- a/src/blog.html
+++ b/src/blog.html
@@ -27,31 +27,47 @@
             </ul>
     </header>
     <br>
-    <article> <h3 class="blog"> My Very First Blog!</h3> <br>
-        <h4> By Connor Ross | Posted on 14/09/2023 </h4> <img class="blog_img" src="./images/Blog 1.jpg" alt=""> <br>
-        Lorem ipsum dolor sit amet consectetur... <a href="blog1.html">Click Here to Read More!</a>
-    </article>
-    <br>
-    <article> <h3 class="blog"> Whats Happening?</h3> <br>
-        <h4> By Connor Ross | Posted on 18/09/2023 </h4> <img class="blog_img" src="./images/Blog 2.jpg" alt="">
-        <br>
-        Lorem ipsum dolor sit amet consectetur... <a href="blog2.html">Click Here to Read More!</a>
-    </article>
-    <br>
-    <article><h3 class="blog"> Wow! I am Learning so Much!</h3><br>
-        <h4> By Connor Ross | Posted on 23/09/2023 </h4><img class="blog_img" src="./images/blog 3.jpg" alt="">
-        <br>
-        Lorem ipsum dolor sit amet consectetur... <a href="blog3.html">Click Here to Read More</a>
-    <br>
-    <article><h3 class="blog">And Another Thing...</h3><br>
-        <h4> By Connor Ross | Posted on 24/09/2023 </h4><img class="blog_img" src="./images/blog 4.jpg" alt="">
-        <br>
-        Lorem ipsum dolor sit amet consectetur... <a href="blog4.html">Click Here to Read More</a>
-    </article>
-    <br>
-    <article><h3 class="blog"> Blogs are pretty neat</h3><br>
-        <h4> By Connor Ross | Posted on 25/09/2023 </h4><img class="blog_img" src="./images/blog 5.jpg" alt="">
-        <br>
-        Lorem ipsum dolor sit amet consectetur...<a href="blog5.html">Click Here to Read More</a>
+    <div id="blog__content">
+        <article id="blog__article">
+            <h3>My Very First Blog</h3>
+            <h4>By Connor Ross | Posted on 14/09/2023</h4>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga autem officia, nulla provident magnam voluptatibus aliquam doloremque reprehenderit quis ea quod minima obcaecati aspernatur explicabo vel aperiam voluptatem mollitia a.
+            </p>
+            <a href="../src/blog1.html">Click Here to Read More!</a>
+        </article>
+        <article id="blog__article"> 
+            <h3>Wow Blog Number 2!</h3>
+            <h4>By Connor Ross | Posted on 18/09/2023 </h4> 
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga autem officia, nulla provident magnam voluptatibus aliquam doloremque reprehenderit quis ea quod minima obcaecati aspernatur explicabo vel aperiam voluptatem mollitia a.
+            </p>
+             <a href="blog2.html">Click Here to Read More!</a>
+        </article>
+        <article id="blog__article">
+            <h3>Wow I am Learning So Much</h3>
+            <h4>By Connor Ross | Posted on 23/09/2023</h4>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga autem officia, nulla provident magnam voluptatibus aliquam doloremque reprehenderit quis ea quod minima obcaecati aspernatur explicabo vel aperiam voluptatem mollitia a.
+            </p>
+            <a href="blog3.html">Click Here to Read More!</a>
+        </article>
+        <article id="blog__article">
+            <h3>And Another Thing...</h3>
+            <h4>By Connor Ross | Posted on 24/09/2023</h4>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga autem officia, nulla provident magnam voluptatibus aliquam doloremque reprehenderit quis ea quod minima obcaecati aspernatur explicabo vel aperiam voluptatem mollitia a.
+            </p>
+            <a href="blog4.html">Click Here to Read More!</a>
+        </article>
+        <article id="blog__article">
+            <h3>Blogs are Pretty Neat!</h3>
+            <h4>By Connor Ross | Posted on 25/09/2023</h4>
+            <p>            
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga autem officia, nulla provident magnam voluptatibus aliquam doloremque reprehenderit quis ea quod minima obcaecati aspernatur explicabo vel aperiam voluptatem mollitia a.
+            </p>
+            <a href="blog5.html">Click Here to Read More!</a>
+        </article>
+    </div>
 </body>
 </html>
