minor text changes

--- a/src/about.html
+++ b/src/about.html
@@ -26,7 +26,7 @@
                 </li>
             </ul>
     </header>
-    <h1 class="blog">A Brief Summary</h1>
+    <h1 class="about__title">A Brief Summary</h1>
     <h2> Growing up!</h2>
     <p>
         I was born in Brisbane in the northern suburb of Bray Park which is where I stayed with my mum and dad for 7 years. My parents eventually split up and my dad moved to the southern suburbs which meant we saw him every second weekend. I attended Petrie State School where I became a school leader in my final year in Grade 7. After graduating from Petrie State School I attended Bray Park State High School. During that time I began working and made an effort to study and work to help support myself for the future. I began my career at KFC, working as a casual employee but working hard and eventaully finding myself in a team leader position before graduating high school. Upon completion of high school and unsure of what to do career-wise, I took the opportunity to become a manager and rapidly grew within the company. I was often moved around to other stores to help uplift their people and standards to bring up the brand name. During this time is also where the pandemic started, which halted my career as their was not enough resources to keep moving me around.
@@ -37,7 +37,7 @@
     </p>
     <h2> Where to from here?</h2>
     <p>
-        Recently, I have had to make several changes to make sure I am setting myself up for success and most importantly make sure I am happy. I couldn't see myself as a Restaurant Manager for much longer and did not plan on being in sales long term. I have always been passionate about technology and computer programming so I am excited to see where I end up. Thankfully, I have Coder Academy to back me up and make sure I learn all the right stuff!
+        Recently, I have had to make several changes to make sure I am setting myself up for success and most importantly to make sure I am happy. I couldn't see myself as a Restaurant Manager for much longer and did not plan on being in sales long term. I have always been passionate about technology and computer programming so I am excited to see where I end up. Thankfully, I have Coder Academy to back me up and make sure I learn all the right stuff!
     </p>
     <br>
     <p>
